--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,19 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
+= form_tag movies_path, :method => :get do
+  Include:
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]"
+  = submit_tag 'Refresh'
+
 %table#movies
   %thead
     %tr
-      %th#title_header{:class=>("hilite" if @sort_column == "title")}= link_to "Movie Title", ".?sort=title"
+      %th#title_header{:class=>("hilite" if @sort_column == "title")}= link_to 'Movie Title', movies_path(:sort => :title)
       %th Rating
-      %th#release_date_header{:class=>("hilite" if @sort_column == "release_date")}= link_to "Release Date", ".?sort=release_date"  
+      %th#release_date_header{:class=>("hilite" if @sort_column == "release_date")}= link_to "Release Date", movies_path(:sort => :release_date)
       %th More Info
   %tbody
     - @movies.each do |movie|
