--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -11,9 +11,9 @@
 %table#movies
   %thead
     %tr
-      %th#title_header{:class=>("hilite" if @sort_column == "title")}= link_to 'Movie Title', movies_path(:sort => :title)
+      %th{:class=>("hilite" if @sort_column == "title")}= link_to 'Movie Title', movies_path(:sort => :title), id: "title_header"
       %th Rating
-      %th#release_date_header{:class=>("hilite" if @sort_column == "release_date")}= link_to "Release Date", movies_path(:sort => :release_date)
+      %th{:class=>("hilite" if @sort_column == "release_date")}= link_to "Release Date", movies_path(:sort => :release_date), id: "release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
