--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -11,9 +11,9 @@
 %table#movies
   %thead
     %tr
-      %th{:class=>("hilite" if @sort_column == "title")}= link_to 'Movie Title', movies_path(:sort => :title, :ratings => @set_ratings), id: "title_header"
+      %th{:class=>("hilite" if @sort_column == "title")}= link_to 'Movie Title', movies_path(:sort => :title, :ratings => @selected_ratings), id: "title_header"
       %th Rating
-      %th{:class=>("hilite" if @sort_column == "release_date")}= link_to "Release Date", movies_path(:sort => :release_date, :ratings => @set_ratings), id: "release_date_header"
+      %th{:class=>("hilite" if @sort_column == "release_date")}= link_to "Release Date", movies_path(:sort => :release_date, :ratings => @selected_ratings), id: "release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
